# flutter-permission-handler

./: .gitattributes  .gitignore  .metadata  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  analysis_options.yaml  pubspec.yaml
.github/: PULL_REQUEST_TEMPLATE.md  no-response.yml  stale.yml
.github/ISSUE_TEMPLATE/: a-regression.yml  b-bug-report.yml  c-feature-request.yml  d-enhancement-proposal.yml  e-question.yml
.github/workflows/: app_facing_package.yaml  no-response.yaml  permission_handler.yaml  permission_handler_android.yaml  permission_handler_apple.yaml  permission_handler_platform_interface.yaml  permission_handler_plugin.yaml  platform_interface_package.yaml  semantic-pr.yml
android/: .project  build.gradle
example/: README.md  pubspec.yaml
example/android/: build.gradle
example/ios/: Podfile
example/lib/: main.dart
example/test/: widget_test.dart
ios/: .gitignore  permission_handler.podspec
ios/Classes/: Enums.h  PermissionHandlerEnums.h  PermissionHandlerPlugin.h  PermissionHandlerPlugin.m  PermissionManager.h  PermissionManager.m  PermissionManager.swift  SwiftPermissionHandlerPlugin.swift
lib/: permission_enums.dart  permission_handler.dart
lib/src/: permission_enums.dart  permission_handler.dart
permission_handler/: AUTHORS  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
permission_handler_android/: CHANGELOG.md  README.md  pubspec.yaml
permission_handler_apple/: .metadata  AUTHORS  CHANGELOG.md  README.md  pubspec.yaml  pubspec_overrides.yaml
permission_handler_default/: README.md  pubspec.yaml
permission_handler_html/: CHANGELOG.md  README.md  pubspec.yaml
permission_handler_platform_interface/: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
permission_handler_web/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
permission_handler_windows/: AUTHORS  CHANGELOG.md  README.md  pubspec.yaml
permission_handler_windows/windows/: CMakeLists.txt  permission_constants.h  permission_handler_windows_plugin.cpp
permission_handler_windows/windows/include/permission_handler/: permission_handler_plugin.h
permission_handler_windows/windows/include/permission_handler_windows/: permission_handler_plugin.h  permission_handler_windows_plugin.h
scripts/: before_build_apks.sh  before_build_ipas.sh  build.sh  format_code.sh
(+444 files in other folders)
